# advent

./: .gitignore  pyproject.toml
advent/: __main__.py
advent/2023/: 1a.py  1b.py  2a.py  2b.py  3a.py  3b.py  4a.py  4b.py  5a.py  5b.py  5b.rs  6a.py  6b.py  7a.py  7b.py  8a.py  8b.py  9a.py  9b.py
advent/aoc/: __init__.py  api.py
