[tool.poetry]
name = "advent"
version = "0.1.0"
description = "Advent of Code"
authors = ["atipls <atihajd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aoc = "^1.0.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
